<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".OpcionMenPpasos">

    <androidx.cardview.widget.CardView
        android:id="@+id/why_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lay_conceptos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/black"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageViewSoft"
            android:layout_width="239dp"
            android:layout_height="178dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:contentDescription="Icono de basicos"
            android:src="@drawable/basicos" />
        <Button
            android:id="@+id/btn_concepto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto1"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto2"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto3"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto4"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto4"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto5"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto5"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto6"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto6"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto7"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto7"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto8"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto8"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto9"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto9"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto10"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto10"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto11"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto11"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_concepto12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_color_men1"
            android:fontFamily="@font/aldrich"
            android:text="@string/btn_concepto12"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_concepto12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/txt_concepto12"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>