<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".OpcionMenSoft">

    <androidx.cardview.widget.CardView
        android:id="@+id/soft_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lay_softs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/black"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewSoft"
                android:layout_width="239dp"
                android:layout_height="178dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="64dp"
                android:contentDescription="Icono de soft"
                android:src="@drawable/proteger" />

            <Button
                android:id="@+id/btn_soft1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_color_men1"
                android:fontFamily="@font/aldrich"
                android:text="@string/btn_soft1"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_soft1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/txt_soft1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_soft2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_color_men1"
                android:fontFamily="@font/aldrich"
                android:text="@string/btn_soft2"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_soft2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/txt_soft2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_soft3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_color_men1"
                android:fontFamily="@font/aldrich"
                android:text="@string/btn_soft3"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_soft3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/txt_soft3"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_soft4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_color_men1"
                android:fontFamily="@font/aldrich"
                android:text="@string/btn_soft4"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_soft4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/txt_soft4"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_soft5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_color_men1"
                android:fontFamily="@font/aldrich"
                android:text="@string/btn_soft5"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_soft5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/txt_soft5"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_soft6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_color_men1"
                android:fontFamily="@font/aldrich"
                android:text="@string/btn_soft6"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_soft6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/txt_soft6"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>